home: make sure case titles don't overflow

--- a/src/css/sections/_cases.scss
+++ b/src/css/sections/_cases.scss
@@ -184,7 +184,10 @@
 				-webkit-transition: -webkit-transform .15s ease-out;
 			}
 			span {
+				overflow: hidden;
 				display: block;
+				text-overflow: ellipsis;
+				white-space: nowrap;
 				&:before {
 					content: '';
 					position: absolute;
